--- a/docs-kits/kits/Industry Core Kit/Software Development View/part_uniqueidpush.mdx
+++ b/docs-kits/kits/Industry Core Kit/Software Development View/part_uniqueidpush.mdx
@@ -3,20 +3,23 @@ sidebar_class_name: hidden
 ---
 
 <!--
-This work is licensed under the CC-BY-4.0 (https://creativecommons.org/licenses/by/4.0/legalcode).
+This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode).
 
 - SPDX-License-Identifier: CC-BY-4.0
-- SPDX-FileCopyrightText: 2023 BASF SE
-- SPDX-FileCopyrightText: 2023 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
+- SPDX-FileCopyrightText: 2023, 2025 BASF SE
+- SPDX-FileCopyrightText: 2023, 2025 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
 - SPDX-FileCopyrightText: 2023 Fraunhofer-Gesellschaft zur Foerderung der angewandten Forschung e.V. (represented by Fraunhofer ISST & Fraunhofer IML)
 - SPDX-FileCopyrightText: 2023 German Edge Cloud GmbH & Co. KG
 - SPDX-FileCopyrightText: 2023 Mercedes Benz AG
-- SPDX-FileCopyrightText: 2023 Robert Bosch Manufacturing Solutions GmbH
-- SPDX-FileCopyrightText: 2023 SAP SE
+- SPDX-FileCopyrightText: 2023, 2025 Robert Bosch Manufacturing Solutions GmbH
+- SPDX-FileCopyrightText: 2023, 2025 SAP SE
 - SPDX-FileCopyrightText: 2023 Siemens AG
 - SPDX-FileCopyrightText: 2023 T-Systems International GmbH
 - SPDX-FileCopyrightText: 2023 ZF Friedrichshafen AG
-- SPDX-FileCopyrightText: 2023 Contributors to the Eclipse Foundation
+- SPDX-FileCopyrightText: 2025 Deloitte Consulting GmbH.
+- SPDX-FileCopyrightText: 2025 GALIA
+- SPDX-FileCopyrightText: 2025 msg systems AG
+- SPDX-FileCopyrightText: 2023, 2025 Contributors to the Eclipse Foundation
 - Source URL: https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/tree/main/docs-kits/kits/Industry%20Core%20Kit (latest version)
 -->
 
@@ -162,7 +165,7 @@ For the EDC asset for receiving Unique ID Push notifications, the following prop
     "edc": "https://w3id.org/edc/v0.0.1/ns/",
     "cx-common": "https://w3id.org/catenax/ontology/common#",
     "cx-taxo": "https://w3id.org/catenax/taxonomy#",
-    "dct": "https://purl.org/dc/terms/"
+    "dct": "http://purl.org/dc/terms/"
   },
   "@id": "{{ _.assetId }}",
   "properties": {
@@ -172,7 +175,7 @@ For the EDC asset for receiving Unique ID Push notifications, the following prop
 }
 ```
 
-Properties `https://purl.org/dc/terms/type` and `https://w3id.org/catenax/ontology/common#version` are used to classify the asset and are explained in the [Digital Twin KIT](https://eclipse-tractusx.github.io/docs-kits/kits/Digital%20Twin%20Kit/Software%20Development%20View/Specification%20Digital%20Twin%20KIT#registration-at-edc) in more detail.
+Properties `http://purl.org/dc/terms/type` and `https://w3id.org/catenax/ontology/common#version` are used to classify the asset and are explained in the [Digital Twin KIT](https://eclipse-tractusx.github.io/docs-kits/kits/Digital%20Twin%20Kit/Software%20Development%20View/Specification%20Digital%20Twin%20KIT#registration-at-edc) in more detail.
 
 For `{{ _.notificationType }}`, use
 - `UniqueIdPushConnectToParentNotification` for the Connect-To-Parent notification asset and
