fix(ic): fixed license information in new/updated files

--- a/docs-kits/kits/Industry Core Kit/page_architecture-view.mdx
+++ b/docs-kits/kits/Industry Core Kit/page_architecture-view.mdx
@@ -9,20 +9,17 @@ sidebar_position: 2
 This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode).
 
 - SPDX-License-Identifier: CC-BY-4.0
-- SPDX-FileCopyrightText: 2023, 2025 BASF SE
-- SPDX-FileCopyrightText: 2023, 2025 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
+- SPDX-FileCopyrightText: 2023 BASF SE
+- SPDX-FileCopyrightText: 2023 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
 - SPDX-FileCopyrightText: 2023 Fraunhofer-Gesellschaft zur Foerderung der angewandten Forschung e.V. (represented by Fraunhofer ISST & Fraunhofer IML)
 - SPDX-FileCopyrightText: 2023 German Edge Cloud GmbH & Co. KG
 - SPDX-FileCopyrightText: 2023 Mercedes Benz AG
-- SPDX-FileCopyrightText: 2023, 2025 Robert Bosch Manufacturing Solutions GmbH
-- SPDX-FileCopyrightText: 2023, 2025 SAP SE
+- SPDX-FileCopyrightText: 2023 Robert Bosch Manufacturing Solutions GmbH
+- SPDX-FileCopyrightText: 2023 SAP SE
 - SPDX-FileCopyrightText: 2023 Siemens AG
 - SPDX-FileCopyrightText: 2023 T-Systems International GmbH
 - SPDX-FileCopyrightText: 2023 ZF Friedrichshafen AG
-- SPDX-FileCopyrightText: 2025 Deloitte Consulting GmbH.
-- SPDX-FileCopyrightText: 2025 GALIA
-- SPDX-FileCopyrightText: 2025 msg systems AG
-- SPDX-FileCopyrightText: 2023, 2025 Contributors to the Eclipse Foundation
+- SPDX-FileCopyrightText: 2023 Contributors to the Eclipse Foundation
 - Source URL: https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/tree/main/docs-kits/kits/Industry%20Core%20Kit (latest version)
 -->
 
